--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
-<html lang="hi">
+<html lang="mr">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Marathi Crime Files</title>
 <script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Firebase -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-// Firebase config
+// 🔥 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
   authDomain: "marathi-crime-files.firebaseapp.com",
@@ -20,247 +22,201 @@ const firebaseConfig = {
   appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
   measurementId: "G-1XQPKL3740"
 };
+
+// 🔧 Initialize
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-const ADMIN_EMAIL="gulistankh2011@gmail.com";
-const IMGBB_API_KEY="2387b6e1ec3474b6df29aaa462344077";
+// Admin Email
+const ADMIN_EMAIL = "zaradigitalseva@gmail.com";
+const IMGBB_KEY = "d12c2e4a8650157b2b6b9fe85336ea43";
 
-// DOM
-const loginBtn=document.getElementById("loginBtn");
-const logoutBtn=document.getElementById("logoutBtn");
-const editorArea=document.getElementById("editorArea");
-const noticeEditor=document.getElementById("noticeEditor");
-const postsArea=document.getElementById("postsArea");
-const blocksList=document.getElementById("blocksList");
-const aTitle=document.getElementById("aTitle");
-const aCat=document.getElementById("aCat");
-const noticeText=document.getElementById("noticeText");
-const headlineText=document.getElementById("headlineText");
-const modalBg=document.getElementById("modalBg");
-const modalClose=document.getElementById("modalClose");
-const modalContent=document.getElementById("modalContent");
-const zoomModal=document.getElementById("zoomModal");
-const zoomImg=document.getElementById("zoomImg");
+// 🔹 DOM
+const loginBtn = document.getElementById("loginBtn");
+const logoutBtn = document.getElementById("logoutBtn");
+const editor = document.getElementById("editor");
+const postsArea = document.getElementById("postsArea");
+const titleIn = document.getElementById("titleIn");
+const catIn = document.getElementById("catIn");
+const blocksList = document.getElementById("blocksList");
+const publishBtn = document.getElementById("publishBtn");
+const modalBg = document.getElementById("modalBg");
+const modalContent = document.getElementById("modalContent");
+const modalClose = document.getElementById("modalClose");
 
-let editingId=null;
+let editId = null;
 
-// Auth
-loginBtn.onclick = async()=>{await signInWithPopup(auth,new GoogleAuthProvider());}
-logoutBtn.onclick=()=>signOut(auth);
+// 🟢 Auth
+loginBtn.onclick = async () => { await signInWithPopup(auth, new GoogleAuthProvider()); }
+logoutBtn.onclick = () => signOut(auth);
 
-auth.onAuthStateChanged(user=>{
-  if(user && user.email===ADMIN_EMAIL){
-    editorArea.classList.remove("hidden");
-    noticeEditor.classList.remove("hidden");
+auth.onAuthStateChanged(user => {
+  if (user && user.email === ADMIN_EMAIL) {
+    editor.classList.remove("hidden");
     loginBtn.classList.add("hidden");
     logoutBtn.classList.remove("hidden");
   } else {
-    editorArea.classList.add("hidden");
-    noticeEditor.classList.add("hidden");
+    editor.classList.add("hidden");
     loginBtn.classList.remove("hidden");
     logoutBtn.classList.add("hidden");
   }
 });
 
-// IMGBB Upload
-async function uploadToImgBB(file){
-  const formData=new FormData();
-  formData.append("image",file);
-  const res=await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`,{method:"POST",body:formData});
-  const data=await res.json();
-  return data.data.url;
+// 🖼 Upload to ImgBB
+async function uploadToImgBB(file) {
+  const fd = new FormData();
+  fd.append("image", file);
+  const r = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_KEY}`, { method: "POST", body: fd });
+  const d = await r.json();
+  return d.data.url;
 }
 
-// Add text/image blocks
-document.getElementById("addTextBtn").onclick=()=>{
-  const t=document.createElement("textarea");
-  t.placeholder="Write paragraph...";
-  t.dataset.type="text";
-  t.className="border p-2 w-full mb-2 rounded";
+// ➕ Add Text/Image Block
+document.getElementById("addTextBtn").onclick = () => {
+  const t = document.createElement("textarea");
+  t.placeholder = "लेख लिहा...";
+  t.dataset.type = "text";
+  t.className = "border p-2 w-full mb-2 rounded";
   blocksList.appendChild(t);
 }
-document.getElementById("addImageBtn").onclick=()=>{
-  const inp=document.createElement("input");
-  inp.type="file";
-  inp.dataset.type="image";
-  inp.className="w-full mb-2";
-  blocksList.appendChild(inp);
+document.getElementById("addImageBtn").onclick = () => {
+  if (blocksList.querySelectorAll('input[type="file"]').length >= 5) return alert("कमाल ५ चित्रे परवानगी!");
+  const f = document.createElement("input");
+  f.type = "file";
+  f.dataset.type = "image";
+  f.className = "w-full mb-2";
+  blocksList.appendChild(f);
 }
 
-// Publish/Update news
-document.getElementById("publishBtn").onclick=async()=>{
-  const title=aTitle.value.trim(), cat=aCat.value.trim();
-  if(!title) return alert("Enter title!");
-  const blocks=[];
-  for(const el of blocksList.children){
-    if(el.dataset.type=="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
-    else if(el.type=="file" && el.files.length>0){
-      const url=await uploadToImgBB(el.files[0]);
-      if(url) blocks.push({type:"image",url});
+// 📰 Publish
+publishBtn.onclick = async () => {
+  const title = titleIn.value.trim();
+  const cat = catIn.value.trim();
+  if (!title) return alert("शीर्षक भरा!");
+
+  const blocks = [];
+  for (const el of blocksList.children) {
+    if (el.dataset.type == "text" && el.value.trim()) blocks.push({ type: "text", text: el.value.trim() });
+    if (el.type == "file" && el.files.length > 0) {
+      const url = await uploadToImgBB(el.files[0]);
+      blocks.push({ type: "image", url });
     }
   }
-  if(blocks.length===0) return alert("Add content!");
-  if(editingId){
-    await updateDoc(doc(db,"news",editingId),{title,category:cat,blocks,time:Date.now()});
-    editingId=null;
+
+  if (blocks.length == 0) return alert("माहिती जोडा!");
+
+  if (editId) {
+    await updateDoc(doc(db, "crime_news", editId), { title, category: cat, blocks, time: Date.now() });
+    editId = null;
   } else {
-    await addDoc(collection(db,"news"),{title,category:cat,blocks,time:Date.now()});
+    await addDoc(collection(db, "crime_news"), { title, category: cat, blocks, time: Date.now() });
   }
-  aTitle.value=aCat.value=""; blocksList.innerHTML="";
-}
 
-// Admin Notice save/edit/delete
-const noticeRef=doc(db,"settings","notice");
-document.getElementById("saveNoticeBtn").onclick=()=>setDoc(noticeRef,{text:document.getElementById("noticeInput").value.trim()});
+  titleIn.value = catIn.value = "";
+  blocksList.innerHTML = "";
+};
 
-// Load news & notice
-onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
-  const posts=snap.docs.map(d=>({id:d.id,...d.data()}));
-  postsArea.innerHTML="";
-  posts.forEach(d=>{
-    const firstImg=d.blocks.find(b=>b.type=="image")?.url||"https://via.placeholder.com/300x200?text=No+Image";
-    const firstText=d.blocks.find(b=>b.type=="text")?.text.substring(0,80)+"..."||"";
-    const card=document.createElement("div");
-    card.className="card";
-    card.innerHTML=`<img src='${firstImg}' class='image-zoom'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
-    card.onclick=()=>showModal(d);
+// 🔍 Load Posts
+onSnapshot(query(collection(db, "crime_news"), orderBy("time", "desc")), snap => {
+  postsArea.innerHTML = "";
+  snap.forEach(d => {
+    const data = d.data();
+    const img = data.blocks.find(b => b.type == "image")?.url || "https://via.placeholder.com/300x150?text=No+Image";
+    const txt = data.blocks.find(b => b.type == "text")?.text.substring(0, 80) + "..." || "";
+    const card = document.createElement("div");
+    card.className = "bg-white shadow rounded overflow-hidden cursor-pointer hover:scale-[1.02] transition";
+    card.innerHTML = `<img src="${img}" class="w-full h-40 object-cover"><div class="p-3"><h3 class="font-bold text-lg mb-1">${data.title}</h3><p class="text-sm text-gray-700">${txt}</p></div>`;
+    card.onclick = () => openModal(d.id, data);
     postsArea.appendChild(card);
   });
-  headlineText.textContent=posts.slice(0,5).map(p=>p.title).join(" — ");
 });
 
-onSnapshot(noticeRef,snap=>{
-  noticeText.textContent=snap.exists()?snap.data().text:"";
-  const user=auth.currentUser;
-  if(user && user.email===ADMIN_EMAIL){
-    if(!document.getElementById("deleteNoticeBtn")){
-      const delBtn=document.createElement("button");
-      delBtn.id="deleteNoticeBtn";
-      delBtn.textContent="Delete Notice";
-      delBtn.className="bg-red-500 text-white px-3 py-1 rounded ml-2";
-      noticeEditor.appendChild(delBtn);
-      delBtn.onclick=async()=>{
-        if(confirm("Delete notice?")) await setDoc(noticeRef,{text:""});
-      }
-    }
-  }
-});
-
-// Show full news modal + admin edit/delete
-modalClose.onclick=()=>modalBg.style.display="none";
-modalBg.onclick=e=>{if(e.target===modalBg) modalBg.style.display="none";}
-function showModal(d){
-  modalContent.innerHTML=`<h2 class='text-lg font-bold mb-2'>${d.title}</h2>`;
-  d.blocks.forEach(b=>{
-    if(b.type=="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
-    else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom mb-2'>`;
+// 🔎 Modal
+function openModal(id, d) {
+  modalContent.innerHTML = `<h2 class="font-bold text-xl mb-2">${d.title}</h2>`;
+  d.blocks.forEach(b => {
+    if (b.type == "text") modalContent.innerHTML += `<p class="mb-2 text-gray-800">${b.text}</p>`;
+    if (b.type == "image") modalContent.innerHTML += `<img src="${b.url}" class="w-full rounded mb-2">`;
   });
-  const user=auth.currentUser;
-  if(user && user.email===ADMIN_EMAIL){
-    const editBtn=document.createElement("button");
-    editBtn.textContent="Edit";
-    editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
-    editBtn.onclick=()=>{
-      editingId=d.id; aTitle.value=d.title; aCat.value=d.category; blocksList.innerHTML="";
-      d.blocks.forEach(b=>{
-        if(b.type=="text"){
-          const t=document.createElement("textarea");
-          t.value=b.text; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded";
+
+  const user = auth.currentUser;
+  if (user && user.email === ADMIN_EMAIL) {
+    const ebtn = document.createElement("button");
+    ebtn.textContent = "Edit";
+    ebtn.className = "bg-gray-300 px-3 py-1 rounded mr-2";
+    ebtn.onclick = () => {
+      editId = id;
+      titleIn.value = d.title;
+      catIn.value = d.category;
+      blocksList.innerHTML = "";
+      d.blocks.forEach(b => {
+        if (b.type == "text") {
+          const t = document.createElement("textarea");
+          t.value = b.text;
+          t.dataset.type = "text";
+          t.className = "border p-2 w-full mb-2 rounded";
           blocksList.appendChild(t);
-        } else{
-          const inp=document.createElement("input"); inp.type="file"; inp.className="w-full mb-2"; blocksList.appendChild(inp);
+        } else {
+          const f = document.createElement("input");
+          f.type = "file";
+          f.dataset.type = "image";
+          f.className = "w-full mb-2";
+          blocksList.appendChild(f);
         }
       });
-      modalBg.style.display="none";
+      modalBg.style.display = "none";
     };
-    const delBtn=document.createElement("button");
-    delBtn.textContent="Delete";
-    delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
-    delBtn.onclick=async()=>{if(confirm("Delete this post?")) await deleteDoc(doc(db,"news",d.id)); modalBg.style.display="none";}
-    modalContent.appendChild(editBtn); modalContent.appendChild(delBtn);
+    const dbtn = document.createElement("button");
+    dbtn.textContent = "Delete";
+    dbtn.className = "bg-red-500 text-white px-3 py-1 rounded";
+    dbtn.onclick = async () => {
+      if (confirm("पोस्ट हटवायची आहे का?")) await deleteDoc(doc(db, "crime_news", id));
+      modalBg.style.display = "none";
+    };
+    modalContent.appendChild(ebtn);
+    modalContent.appendChild(dbtn);
   }
-  modalBg.style.display="flex";
-  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{img.onclick=()=>{zoomImg.src=img.src; zoomModal.style.display="flex";}});
+
+  modalBg.style.display = "flex";
 }
 
-document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
-zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
-
+modalClose.onclick = () => modalBg.style.display = "none";
+modalBg.onclick = e => { if (e.target === modalBg) modalBg.style.display = "none"; }
 </script>
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
-header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
-header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
-.header-buttons button:hover{transform:scale(1.05);}
-.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
-.notice-ticker{background:#dc2626;padding:6px;top:56px;}
-.headline-ticker{background:#1e40af;padding:6px;top:88px;}
-.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
-@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
-.card:hover{transform:scale(1.02);}
-.card img{width:100%;height:auto;object-fit:contain;cursor:zoom-in;transition:transform 0.3s;}
-.card-body{padding:8px;}
-.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
-.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
-.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
-.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
-.modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
-.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
-.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
-.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
-.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
-.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
+body { background: #f4f5f8; font-family: "Noto Sans Devanagari", Arial, sans-serif; }
 </style>
+</head>
+<body class="text-gray-900">
 
-<header>
-  <div class="flex items-center">
-    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
-    <h1 class="font-bold text-xl">Marathi Crime Files</h1>
-  </div>
-  <div class="header-buttons">
-    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
-    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
+<header class="flex justify-between items-center bg-red-800 text-white p-3 shadow sticky top-0 z-50">
+  <h1 class="text-xl font-bold">Marathi Crime Files</h1>
+  <div>
+    <button id="loginBtn" class="bg-green-600 px-3 py-1 rounded">Login</button>
+    <button id="logoutBtn" class="bg-gray-700 px-3 py-1 rounded hidden">Logout</button>
   </div>
 </header>
 
-<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
-<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
-
-<section id="noticeEditor" class="editor hidden">
-  <h2>📰 Admin Notice</h2>
-  <input id="noticeInput" placeholder="Enter notice text...">
-  <button id="saveNoticeBtn">Save</button>
-</section>
-
-<section id="editorArea" class="editor hidden">
-  <h2>🖋️ Admin: Create/Edit News</h2>
-  <input id="aTitle" placeholder="Title">
-  <input id="aCat" placeholder="Category">
+<section id="editor" class="hidden p-4 bg-white shadow m-3 rounded">
+  <h2 class="text-lg font-bold mb-2">📰 Admin Panel</h2>
+  <input id="titleIn" placeholder="शीर्षक" class="border p-2 w-full mb-2 rounded">
+  <input id="catIn" placeholder="वर्ग (Category)" class="border p-2 w-full mb-2 rounded">
   <div id="blocksList"></div>
-  <button id="addTextBtn">Add Text</button>
-  <button id="addImageBtn">Add Image</button>
-  <button id="publishBtn">Publish</button>
+  <button id="addTextBtn" class="bg-blue-600 text-white px-3 py-1 rounded mr-2">Text जोडा</button>
+  <button id="addImageBtn" class="bg-blue-500 text-white px-3 py-1 rounded mr-2">Image जोडा</button>
+  <button id="publishBtn" class="bg-green-700 text-white px-4 py-1 rounded">Publish</button>
 </section>
 
-<section class="posts-grid" id="postsArea"></section>
+<section id="postsArea" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 p-3"></section>
 
-<div id="modalBg" class="modal-bg">
-  <div class="modal">
-    <button id="modalClose" class="modal-close">X</button>
+<div id="modalBg" class="fixed inset-0 bg-black bg-opacity-60 hidden justify-center items-center z-50">
+  <div class="bg-white rounded-lg max-w-2xl w-11/12 max-h-[85%] overflow-y-auto p-4 relative">
+    <button id="modalClose" class="absolute top-2 right-3 text-black text-xl font-bold">×</button>
     <div id="modalContent"></div>
   </div>
 </div>
 
-<div id="zoomModal" class="zoom-modal">
-  <button class="zoom-close">X</button>
-  <img id="zoomImg">
-</div>
+</body>
 </html>
