--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="hi">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Marathi Crime Files</title>
 <script src="https://cdn.tailwindcss.com"></script>
 
@@ -10,9 +10,8 @@
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, addDoc, doc, setDoc, deleteDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getFirestore, collection, addDoc, doc, setDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-// 🔹 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
   authDomain: "marathi-crime-files.firebaseapp.com",
@@ -44,11 +43,10 @@ const headlineText = document.getElementById("headlineText");
 let editingId = null;
 let currentPosts = [];
 
-// 🔹 Login
-loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
-logoutBtn.onclick = ()=>signOut(auth);
+// Login/Logout
+loginBtn.onclick = () => signInWithPopup(auth, provider).catch(e=>alert(e.message));
+logoutBtn.onclick = () => signOut(auth);
 
-// 🔹 Auth state
 onAuthStateChanged(auth,user=>{
   if(user && user.email===ADMIN_EMAIL){
     editorArea.classList.remove("hidden");
@@ -63,23 +61,23 @@ onAuthStateChanged(auth,user=>{
   }
 });
 
-// 🔹 Add Text/Image Blocks
+// Add Text/Image Blocks
 document.getElementById("addTextBtn").onclick = ()=>{
   const t = document.createElement("textarea");
   t.placeholder = "Write paragraph...";
   t.dataset.type = "text";
   t.className = "border p-2 w-full mb-2 rounded";
   blocksList.appendChild(t);
-}
+};
 document.getElementById("addImageBtn").onclick = ()=>{
   const inp = document.createElement("input");
   inp.type = "file";
   inp.dataset.type = "image";
   inp.className = "w-full mb-2";
   blocksList.appendChild(inp);
-}
+};
 
-// 🔹 Publish News
+// Publish News
 document.getElementById("publishBtn").onclick = async()=>{
   const title = aTitle.value.trim();
   const cat = aCat.value.trim();
@@ -103,197 +101,126 @@ document.getElementById("publishBtn").onclick = async()=>{
     await addDoc(collection(db,"news"),{title,category:cat,blocks,time:Date.now()});
   }
   aTitle.value=aCat.value=""; blocksList.innerHTML="";
-}
+};
 
-// 🔹 Load Posts
+// Load Posts
 onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
   currentPosts = snap.docs.map(d=>({id:d.id,...d.data()}));
   renderPosts();
 });
 
-// 🔹 Notice
+// Save Notice
 document.getElementById("saveNoticeBtn").onclick = async()=>{
   await setDoc(doc(db,"settings","notice"),{text:noticeInput.value.trim()});
-}
+};
 onSnapshot(doc(db,"settings","notice"),snap=>{
   noticeText.textContent = snap.exists()?snap.data().text:"";
 });
-// Show modal
-modalClose?.addEventListener('click',()=>modalBg.style.display="none");
-modalBg?.addEventListener('click', e=>{if(e.target===modalBg) modalBg.style.display="none";})
 
-function showModal(index){
-  const d = currentPosts[index];
-  currentIndex = index;
-  modalContent.innerHTML=`<h2 class='text-lg font-bold mb-2'>${d.title}</h2>`;
-  d.blocks.forEach(b=>{
-    if(b.type==="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
-    else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom mb-2'>`;
+// Render Posts
+function renderPosts(){
+  postsArea.innerHTML="";
+  currentPosts.forEach((d,i)=>{
+    const firstImg = d.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
+    const firstText = d.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
+    const card = document.createElement("div");
+    card.className="card cursor-pointer relative overflow-hidden rounded shadow-md";
+    card.innerHTML = `<img src="${firstImg}" class="card-img w-full h-48 object-cover"><div class="card-body p-2"><h3 class="font-bold text-base">${d.title}</h3><p class="text-sm text-gray-700">${firstText}</p></div>`;
+    card.onclick = ()=>openModal(d);
+    postsArea.appendChild(card);
   });
 
-  const user = auth.currentUser;
-  if(user && user.email === ADMIN_EMAIL){
-    const adminDiv = document.createElement("div");
-    adminDiv.style.position="absolute";
-    adminDiv.style.top="8px";
-    adminDiv.style.right="8px";
-    adminDiv.style.display="flex";
-    adminDiv.style.gap="6px";
-    adminDiv.style.zIndex="30";
-
-    const editBtn = document.createElement("button");
-    editBtn.innerHTML="✏️ Edit";
-    editBtn.onclick = (e)=>{
-      e.stopPropagation();
-      editingId = d.id;
-      aTitle.value = d.title;
-      aCat.value = d.category;
-      blocksList.innerHTML="";
-      d.blocks.forEach(b=>{
-        if(b.type==="text"){
-          const t = document.createElement("textarea");
-          t.value = b.text;
-          t.dataset.type="text";
-          t.className="border p-2 w-full mb-2 rounded";
-          blocksList.appendChild(t);
-        } else {
-          const inp = document.createElement("input");
-          inp.type="file";
-          inp.className="w-full mb-2";
-          blocksList.appendChild(inp);
-        }
-      });
-      modalBg.style.display="none";
-    };
-
-    const delBtn = document.createElement("button");
-    delBtn.innerHTML="🗑️ Delete";
-    delBtn.style.background="linear-gradient(45deg,#ef4444,#b91c1c)";
-    delBtn.onclick=async(e)=>{
-      e.stopPropagation();
-      if(confirm("Delete this post?")){
-        await deleteDoc(doc(db,"news",d.id));
-        modalBg.style.display="none";
-      }
-    };
-
-    adminDiv.appendChild(editBtn);
-    adminDiv.appendChild(delBtn);
-    modalContent.appendChild(adminDiv);
-  }
-
-  modalBg.style.display="flex";
-
-  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{
-    img.onclick=()=>{zoomImg.src=img.src; zoomModal.style.display="flex";}
-  });
+  headlineText.textContent=currentPosts.slice(0,5).map(p=>p.title).join(" — ");
 }
 
-document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
-zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
+// Open Modal
+function openModal(post){
+  const modal = document.getElementById("postModal");
+  document.getElementById("modalTitle").textContent = post.title;
+  document.getElementById("modalCategory").textContent = post.category||"";
+  const textBlocks = document.getElementById("modalTextBlocks");
+  const imgSlider = document.getElementById("modalImageSlider");
+  textBlocks.innerHTML=""; imgSlider.innerHTML="";
+
+  post.blocks.filter(b=>b.type==="text").forEach(t=>{
+    const p = document.createElement("p"); p.textContent=t.text; p.className="mb-2"; textBlocks.appendChild(p);
+  });
+
+  const images = post.blocks.filter(b=>b.type==="image").map(b=>b.url);
+  images.forEach((url,i)=>{
+    const img = document.createElement("img");
+    img.src = url;
+    img.className = "absolute top-0 left-0 w-full h-full object-cover transition-opacity duration-500";
+    img.style.opacity = i===0?1:0;
+    imgSlider.appendChild(img);
+  });
+
+  let idx = 0;
+  if(images.length>1){
+    setInterval(()=>{
+      const imgs = imgSlider.querySelectorAll("img");
+      imgs.forEach(img=>img.style.opacity=0);
+      imgs[idx].style.opacity=1;
+      idx = (idx+1)%imgs.length;
+    },3000);
+  }
+
+  modal.classList.remove("hidden");
+}
+document.getElementById("closeModal").onclick = ()=>document.getElementById("postModal").classList.add("hidden");
+
+// Menu toggle
+function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
+
 </script>
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
-.header-buttons button:hover{transform:scale(1.05);}
-.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
-.notice-ticker{background:#dc2626;padding:6px;top:56px;}
-.headline-ticker{background:#1e40af;padding:6px;top:88px;}
-.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
-@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
-.card:hover{transform:scale(1.02);}
-.card img{width:100%;height:auto;object-fit:contain;cursor:zoom-in;transition:transform 0.3s;}
-.card-body{padding:8px;}
-.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
-.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
+.nav-btn,.auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
+.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:50px;z-index:300;}
+.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 15s linear infinite;}
+@keyframes scrollNotice{0%{transform:translateX(0);}100%{transform:translateX(-100%);}}
+.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:74px;z-index:300;}
+.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
+.card img{width:100%;height:150px;object-fit:cover;transition:transform 0.2s;}
+.card:hover img{transform:scale(1.05);}
 .editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
 .editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
 .editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
-.modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
-.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
-.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
-.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
-.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
-.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
-/* Bottom bar */
-.bottom-bar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 6px;
-  padding: 5px 4px;
-  background: linear-gradient(90deg, #1e3a8a, #2563eb);
-  box-shadow: 0 -4px 12px rgba(0,0,0,0.25);
-  z-index: 100000;
-}
-
-.bottom-bar button {
-  flex: 1;
-  margin: 0 4px;
-  background: #ffffff;
-  color: #1e3a8a;
-  font-weight: 700;
-  border: none;
-  border-radius: 8px;
-  padding: 5px 0;
-  cursor: pointer;
-  box-shadow: 0 4px 0 rgba(0,0,0,0.15);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 4px;
-  font-size: 13px;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-
-.bottom-bar button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 6px rgba(0,0,0,0.2);
-}
-
-.bottom-bar button:active {
-  transform: translateY(0);
-  box-shadow: 0 4px 0 rgba(0,0,0,0.15);
-}
-
-@media (max-width:600px){
-  .bottom-bar button { font-size: 12px; padding: 4px 0; }
-}
+.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:9999;}
+.modal-content{background:#fff;border-radius:10px;width:90%;max-width:600px;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
+.modal-content img{max-width:100%;margin-bottom:6px;border-radius:6px;}
+.close-modal{position:absolute;top:10px;right:10px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
+#modalImageSlider{position:relative;height:250px;}
 </style>
 </head>
 <body>
 
-<header>
-  <div class="flex items-center">
+<header class="flex justify-between items-center">
+  <div class="flex items-center space-x-2">
     <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="Logo">
-    <h1 class="font-bold text-xl">Marathi Crime Files</h1>
+    <h1 class="font-bold text-base sm:text-lg">Marathi Crime Files</h1>
   </div>
-  <div class="header-buttons">
-    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
-    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
+  <div class="relative">
+    <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
+    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden z-[10000]">
+      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Story</button>
+      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Gumshuda</button>
+      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Lawarish</button>
+      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Crime</button>
+    </div>
+  </div>
+  <div class="flex space-x-1">
+    <button id="loginBtn" class="auth-btn bg-green-500 text-white">Login</button>
+    <button id="logoutBtn" class="auth-btn bg-red-600 text-white hidden">Logout</button>
   </div>
 </header>
 
-<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
-<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
-
-<section id="postsArea" class="posts-grid"></section>
-
-<section id="noticeEditor" class="editor hidden">
-  <h2>📰 Admin Notice</h2>
-  <input id="noticeInput" placeholder="Enter notice text...">
-  <button id="saveNoticeBtn">Save</button>
-</section>
+<div class="notice-ticker"><span id="noticeText"></span></div>
+<div class="headline-ticker"><span id="headlineText"></span></div>
 
 <section id="editorArea" class="editor hidden">
   <h2>🖋️ Admin: Create/Edit News</h2>
@@ -305,25 +232,24 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
   <button id="publishBtn">Publish</button>
 </section>
 
-<!-- Zoom modal -->
-<div id="zoomModal" class="zoom-modal" aria-hidden="true">
-  <button class="zoom-close" aria-label="Close zoom">X</button>
-  <img id="zoomImg" alt="Zoomed image">
-</div>
+<section id="postsArea" class="posts-grid"></section>
+
+<section id="noticeEditor" class="editor hidden">
+  <h2>📰 Admin Notice</h2>
+  <input id="noticeInput" placeholder="Enter notice text...">
+  <button id="saveNoticeBtn">Save Notice</button>
+</section>
 
 <!-- Modal -->
-<div id="modalBg" class="modal-bg">
-  <div class="modal" id="modalContent">
-    <button class="modal-close" id="modalClose">X</button>
+<div id="postModal" class="modal-bg flex hidden">
+  <div class="modal-content">
+    <button id="closeModal" class="close-modal">X</button>
+    <h2 id="modalTitle" class="font-bold text-lg mb-1"></h2>
+    <h3 id="modalCategory" class="text-sm mb-3 text-gray-600"></h3>
+    <div id="modalImageSlider"></div>
+    <div id="modalTextBlocks" class="mt-2"></div>
   </div>
 </div>
-
-<!-- Bottom bar -->
-<footer class="bottom-bar" role="contentinfo" aria-label="Bottom navigation">
-  <button onclick="location.href='#about'"><span>🛈</span> About</button>
-  <button onclick="location.href='#contact'"><span>✉️</span> Contact</button>
-  <button onclick="location.href='#privacy'"><span>🔒</span> Privacy</button>
-</footer>
 
 </body>
 </html>
